ISSUE #36 - HACK, horrible workaround to use jQuery event handling instead of angular.

--- a/views/ng-templates/menu.jade
+++ b/views/ng-templates/menu.jade
@@ -18,4 +18,7 @@
 			a.dashboard-tab(ng-click="go('settings')")
 				i.fa.fa-gear.menu-icon
 				| SETTINGS
+		li
+			a.dashboard-tab#bp-collapser
+				i.fa.fa-caret-up
 
