--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -10,7 +10,8 @@
 		#ui2-metadata
 			div#ui2-metadata-collapse-btn.pull-right.panel-collapse-btn
 				i.fa.fa-tag
-			div#metadata
+			div#meta-popup
+				div#metadata
 
 
 
