ISSUE #36 - Made bottom tabs a little more sane.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1179,8 +1179,10 @@ header button.btn {
 }
 
 .bottom-tabs {
+	position: relative;
 	border: none;
 	font-size: 8pt;
+	left: 15%;
 }
 
 .collapsed .bottom-tabs {
