--- a/views/ng-templates/timeline.jade
+++ b/views/ng-templates/timeline.jade
@@ -1,4 +1,4 @@
-.col-md-8.col-md-offset-2.bottom-info
+.col-md-12.bottom-info
 	ng-include(src="'menu.html'")
 	div(ng-if='Data.RevisionsByDay.loading')
 		img.loading(src='/public/images/ajax-loader.gif', width='20', height='20')
