--- a/views/ng-templates/info.jade
+++ b/views/ng-templates/info.jade
@@ -1,4 +1,4 @@
-.col-md-8.col-md-offset-2.bottom-info
+.col-md-12.bottom-info
 	ng-include(src="'menu.html'")
 	.col-sm-12.margined
 		p Owner: {{Data.ProjectData.owner}}
