--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -118,6 +118,10 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type='text/ng-template', id='settings.html')
 			include ng-templates/settings.jade
 
+		// Cobie template
+		script(type='text/ng-template', id='cobie.html')
+			include ng-templates/cobie.jade
+
 		// Home page template
 		script(type='text/ng-template', id='home.html')
 			include ng-templates/home.jade
