ISSUE #36 - small aesthetic changes to the info view

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1041,6 +1041,10 @@ img.loading{
 }
 
 /***** UIv2 elements *****/
+button, button.btn {
+	border-radius: 0;
+}
+
 header button.btn {
 	background: none;
 	font-size: 14pt;
