ISSUE #36 - moved the version control widget to the mainpage template.
Also, moved the Data injection from the LoginCtrl to the MainCtrl, where it
makes a little more sense. Ideally mainpage should probably be rendered
in the ViewCtrl - might do that later.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1232,11 +1232,11 @@ header button.btn {
 #nav-version-control {
 	width: 650px;
 	position: absolute;
-	left: calc(50% - 300px);
-	margin-left: auto;
-	margin-right: auto;
+	left: calc(50% - 315px);
 	margin-top: 20px;
 	display: inline;
+	top: 0;
+	z-index: 10000;
 }
 
 #nav-version-control .btn-group.menu-button {
@@ -1254,6 +1254,10 @@ header button.btn {
 
 #nav-version-control .btn-group.menu-button button.btn:hover {
 	background: none;
+}
+
+.nav-project-title {
+	color: #ffffff;
 }
 
 .dropdown-menu {
