--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -243,11 +243,6 @@ span.fancytree-title:hover {
 	right: 0px;
 }
 
-.project-viewport {
-	width: 100%;
-	height: 100%;
-}
-
 .treerow{
     margin-left: 10px;
     text-align: left !important;
@@ -321,11 +316,15 @@ span.fancytree-title:hover {
 }
 
 .viewport,
-#viewer{
+#viewer,
+#x3dom-viewer-canvas
+{
 	width:100%;
-	height: 100%;
-	border:0px;
+	height: calc(100% + 45px);
+	position: absolute;
+	bottom: 0px;
 	display: block;
+	border: 0px;
 }
 
 #loginPage {
@@ -1053,10 +1052,10 @@ header button.btn {
 
 #ui2-treeview {
 	position: fixed;
-	bottom: 45px;
+	bottom: 0px;
 	left: 0;
 	width: 25%;
-	height: calc(100% - 60px - 45px);
+	height: calc(100% - 60px);
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -1095,10 +1094,10 @@ header button.btn {
 
 #ui2-metadata {
 	position: fixed;
-	bottom: 45px;
+	bottom: 0px;
 	right: 0;
 	width: 25%;
-	height: calc(100% - 60px - 45px);
+	height: calc(100% - 60px);
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -1179,14 +1178,15 @@ header button.btn {
 }
 
 #bottom-panel.collapsed {
-	top: calc(100% - 45px);
+	top: 100%
 }
 
 .bottom-tabs {
 	position: relative;
 	border: none;
 	font-size: 8pt;
-	left: 15%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .collapsed .bottom-tabs {
