MASTER - Better UI controls, and some CSS changes

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -316,15 +316,15 @@ span.fancytree-title:hover {
 }
 
 .viewport,
-#viewer,
-#x3dom-viewer-canvas
+#viewer
 {
 	width:100%;
-	height: calc(100% + 45px);
-	position: absolute;
+	height: 100%; 
 	bottom: 0px;
+	position: absolute;
 	display: block;
 	border: 0px;
+	top: 0px;
 }
 
 #loginPage {
