--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -1,5 +1,5 @@
 .container-fluid
-	#nav-version-control
+	#nav-version-control(ng-controller='RevisionCtrl')
 		span.nav-project-title  <b>{{Data.ProjectData.name}}</b>
 		.btn-group.menu-button
 			button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
