ISSUE #36 - Fixed the way bottom panel is expanded/collapsed.

--- a/views/ng-templates/menu.jade
+++ b/views/ng-templates/menu.jade
@@ -23,6 +23,6 @@
 				i.fa.fa-list-alt.menu-icon
 				| COBIE
 		li
-			a.dashboard-tab#bp-collapser
-				i.fa.fa-caret-up
+			a.dashboard-tab#bp-collapser(ng-click="toggleBottomPanel()")
+				i.fa.fa-arrows-v
 
