--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -319,7 +319,7 @@ span.fancytree-title:hover {
 #viewer
 {
 	width:100%;
-	height: 100%; 
+	height: 100%;
 	bottom: 0px;
 	position: absolute;
 	display: block;
@@ -1185,8 +1185,7 @@ header button.btn {
 	position: relative;
 	border: none;
 	font-size: 8pt;
-	margin-left: auto;
-	margin-right: auto;
+	left: 10%;
 }
 
 .collapsed .bottom-tabs {
