ISSUE #42 - Partial implementation of 3D diff visualisation

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -47,7 +47,9 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/angularjs/data/Branches.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Comments.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/CurrentBranch.js")
+		script(type="text/javascript" src="/public/js/angularjs/data/CurrentDiffBranch.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/CurrentRevision.js")
+		script(type="text/javascript" src="/public/js/angularjs/data/CurrentDiffRevision.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Federation.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Log.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/ProjectData.js")
