--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -316,7 +316,7 @@ span.fancytree-title:hover {
 }
 
 .viewport,
-#viewer
+.viewer
 {
 	width:100%;
 	height: 100%;
@@ -1229,9 +1229,11 @@ header button.btn {
 }
 
 #nav-version-control {
-	width: 650px;
+	//width: 650px;
 	position: absolute;
-	left: calc(50% - 315px);
+	left: 200px;
+	//margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	display: inline;
 	top: 0;
