--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -33,6 +33,8 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/floatingmeta.js")
 		script(type="text/javascript" src="/public/js/viewer.js")
 		script(type="text/javascript" src="/public/js/oculus.js")
+		script(type="text/javascript" src="/public/js/gamepad.js")
+		script(type="text/javascript" src="/public/js/collision.js")
 
 		script.
 			angular.module('3drepo', ['ui.router', 'ui.bootstrap']);
