--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -328,18 +328,28 @@ span.fancytree-title:hover {
 }
 
 #loginPage {
-	background-color: #004594;
-	position: absolute;
-	top: 0px;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
+	height: 800px;
+	background: url('/public/images/dummies/login-background.jpg') no-repeat center center;
+	background-size: cover;
+	color: #ffffff;
 }
 
-#credentials-box {
-    padding: 20% 0 0;
-    width: 320px;
-    margin: auto;
+#loginPage h2 {
+	color: rgb(32, 65, 170);
+}
+
+#loginPage .row {
+	margin-top: 50px;
+}
+
+#credentials-box input {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#credentials-box button {
+	margin-left: 10px;
+	text-transform: uppercase;
 }
 
 .metadata-title{
@@ -1341,3 +1351,21 @@ ul.fancytree-container li {
 	font-weight: normal;
 }
 
+/********** masonry **********/
+.item-masonry, .grid-sizer {
+	width: calc(25% - 1px);
+	/*margin-bottom: -3px;*/
+}
+
+.item-masonry.w2 {
+	width: calc(50% - 2px);
+}
+
+.item-masonry-description {
+	position: absolute;
+	bottom: 0;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.8);
+	width: 100%;
+	height: 30%;
+}
