--- a/views/ng-templates/login.jade
+++ b/views/ng-templates/login.jade
@@ -15,11 +15,11 @@
 				#message
 					h4.text-center.error {{errorMessage}}
 
-div.js-masonry(ng-controller='LoginCtrl', data-masonry-options='{ "itemSelector": ".item-masonry", "columnWidth": ".grid-sizer", "gutter": 0, "percentPosition": true}')
-	div.grid-sizer
-	div.item-masonry(ng-repeat='project in featuredProjects', class='{{project.additionalClass}}')
-		img.img-responsive(src='{{project.img}}')
-		.item-masonry-description
-			h4 {{project.title}}
-			p {{project.description}}
+//div.js-masonry(ng-controller='LoginCtrl', data-masonry-options='{ "itemSelector": ".item-masonry", "columnWidth": ".grid-sizer", "gutter": 0, "percentPosition": true}')
+//	div.grid-sizer
+//	div.item-masonry(ng-repeat='project in featuredProjects', class='{{project.additionalClass}}')
+//		img.img-responsive(src='{{project.img}}')
+//		.item-masonry-description
+//			h4 {{project.title}}
+//			p {{project.description}}
 
