--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -1,53 +1,56 @@
 .container-fluid
 	#nav-version-control(ng-controller='RevisionCtrl')
-		span.nav-project-title  <b>{{Data.ProjectData.name}}</b>
-		span#revisionSpan
-			.btn-group.menu-button
-				button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
-					i.fa.fa-code-fork.menu-icon
-					span.button-title Branch:
-					span.button-keyword {{Data.CurrentBranch.name}}
-					span.caret
-				ul.dropdown-menu(role='menu')
-					li(ng-repeat='branch in Data.Branches.branches')
-						a(href='#', ng-click='Data.setBranch(branch)')
-							span.button-keyword {{branch}}
-			span.revision
+		div.nav-project-title  <b>{{Data.ProjectData.name}}</b>
+		div#revisions-selector
+			#revisionSpan
 				.btn-group.menu-button
 					button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
-						i.fa.fa-tag.menu-icon
-						span.button-title Revision:
-						span.button-keyword {{Data.CurrentRevision.shortName}}
+						i.fa.fa-code-fork.menu-icon
+						span.button-title Branch:
+						span.button-keyword {{Data.CurrentBranch.name}}
 						span.caret
 					ul.dropdown-menu(role='menu')
-						li(ng-repeat='rev in Data.CurrentBranch.revisions')
-							a(href='#', ng-click='setRevision(rev)')
-								span.button-keyword {{rev.name}}
-		span.nav-project-title
-			a(href="#", ng-hide="Data.diffEnabled", ng-click="Data.enableDiff()")
-				span.button-keyword Diff
-		span#diffSpan(ng-show="Data.diffEnabled")
-			.btn-group.menu-button
-				button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
-					i.fa.fa-code-fork.menu-icon
-					span.button-title Diff Branch:
-					span.button-keyword {{Data.CurrentDiffBranch.name}}
-					span.caret
-				ul.dropdown-menu(role='menu')
-					li(ng-repeat='branch in Data.Branches.branches')
-						a(href='#', ng-click='Data.setDiffBranch(branch)')
-							span.button-keyword {{branch}}
-			span.revision
+						li(ng-repeat='branch in Data.Branches.branches')
+							a(href='#', ng-click='Data.setBranch(branch)')
+								span.button-keyword {{branch}}
+				span.revision
+					.btn-group.menu-button
+						button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
+							i.fa.fa-tag.menu-icon
+							span.button-title Revision:
+							span.button-keyword {{Data.CurrentRevision.shortName}}
+							span.caret
+						ul.dropdown-menu(role='menu')
+							li(ng-repeat='rev in Data.CurrentBranch.revisions')
+								a(href='#', ng-click='setRevision(rev)')
+									span.button-keyword {{rev.name}}
+			#diffToggle.nav-project-title
+				a(href="#", ng-click="Data.toggleDiff()")
+					<i class='fa fa-random'></i>
+					| DIFF
+
+			#diffSpan(ng-show="Data.diffEnabled")
 				.btn-group.menu-button
 					button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
-						i.fa.fa-tag.menu-icon
-						span.button-title Diff Revision:
-						span.button-keyword {{Data.CurrentDiffRevision.shortName}}
+						i.fa.fa-code-fork.menu-icon
+						span.button-title Branch:
+						span.button-keyword {{Data.CurrentDiffBranch.name}}
 						span.caret
 					ul.dropdown-menu(role='menu')
-						li(ng-repeat='rev in Data.CurrentDiffBranch.revisions')
-							a(href='#', ng-click='setDiff(rev)')
-								span.button-keyword {{rev.name}}
+						li(ng-repeat='branch in Data.Branches.branches')
+							a(href='#', ng-click='Data.setDiffBranch(branch)')
+								span.button-keyword {{branch}}
+				span.revision
+					.btn-group.menu-button
+						button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
+							i.fa.fa-tag.menu-icon
+							span.button-title Revision:
+							span.button-keyword {{Data.CurrentDiffRevision.shortName}}
+							span.caret
+						ul.dropdown-menu(role='menu')
+							li(ng-repeat='rev in Data.CurrentDiffBranch.revisions')
+								a(href='#', ng-click='setDiff(rev)')
+									span.button-keyword {{rev.name}}
 
 	#project-viewport-container.row
 		div#x3d.project-viewport
