--- a/views/ng-templates/menu.jade
+++ b/views/ng-templates/menu.jade
@@ -1,4 +1,4 @@
-.col-md12.margin-bottom
+.margin-bottom
 	ul.nav.nav-tabs.nav.bottom-tabs(role='tablist')
 		li(ng-class="{'active': isView('info')}")
 			a.dashboard-tab(ng-click="go('info')")
